# massive-mail

./: .gitignore  Cargo.toml  README.md
src/: config.rs  content_description.rs  encryption.rs  main.rs
