[package]
name = "massive-mail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = { version="0.10.4" }
tracing-subscriber = "0.3.16"
anyhow = "1.0.70"
rpassword = "7.2.0"
clap = { version = "4.2.4", features = ["derive"] }
handlebars = "5.0.0-beta.2"
sequoia-openpgp = { version = "1.16.0", git = "https://gitlab.com/EKTehtris/sequoia" }
fastrand = "1.9.0"
base64 = "0.21.2"
serde_json = "1.0.96"
pulldown-cmark = "0.9.3"